--- a/style.css
+++ b/style.css
@@ -1,9 +1,41 @@
-html { 
-  background: url(https://wallpapercave.com/wp/wp7124705.jpg) no-repeat center center fixed; 
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
+
+/*html {*/
+/*    height: 100%;*/
+/*}*/
+
+body {
+  content: ' ';
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  margin-top: -32px;
+  margin-left: 0;
+}
+
+#wrapper {
+    height: 100vh;
+    width: 100%;
+    position: relative;
+    opacity: 1;
+}
+
+#wrapper::before {
+  content: "";
+  background-image: url('https://wallpapercave.com/wp/wp7124705.jpg');
+  background-repeat: no-repeat;
+  /*background-position: 50% 0;*/
+  /*height: 100%;*/
   background-size: cover;
+  opacity: 0.4;
+  position: absolute;
+  top: 0px; left: 0px; bottom: 0px; right: 0px;
+}
+
+section {
+    position: relative;
 }
 
 h1 {
@@ -11,28 +43,44 @@ h1 {
     color: DeepPink;
     font-family: arial;
     text-align: center;
+    position: relative;
+    top: 30px;
 }
+
+/*#pictures {*/
+/*    border-color: orange;*/
+/*}*/
 
 p {
     font-size: 2em;
-    color: pink;
+    color: navy;
+    font-weight: bold;
     font-family: arial;
     text-align: center;
+    position: absolute;
+    top: 100px; 
+    left: 100px;
+    right: 100px;
 }
 
 .hike {
     font-size: 1em;
-    color: yellow;
+    color: black;
     font-family: arial;
     border-style: solid;
 }
 
 #hike-list {
     display: flex;
-    /*flex-direction: column;*/
     flex-wrap: wrap;
     max-width: 80%;
-    margin: auto;
+    margin: 0 auto 0 auto; 
+    position: relative;
+    top: 400px;
+}
+
+.hike-name {
+    flex-basis: 33%;
 }
 
 .hike {
@@ -40,18 +88,42 @@ p {
    flex: 0 0 33%;
    flex-grow: 1;
    text-align: left;
+   margin: auto;
    padding: 50px;
- }
+}
  
- @media (max-width: 1045px) { 
+.hike.first {
+   border-right: 0;
+   border-bottom: 0;
+}
+
+.hike.second {
+    border-bottom: 0;
+    border-left: 0;
+}
+
+.hike.third {
+    border-right: 0;
+    border-top: 0;
+}
+ 
+.hike.fourth {
+   border-left: 0;
+   border-top: 0;
+} 
+
+/*to avoid thick overlapping lines in the grid, but this removes borders when I re-size the page*/
+
+@media (max-width: 1045px) { 
     #hike-list {
         max-width: 100%;
     }
+   
    .hike { 
-       flex: 0 0 50%;
+       flex: 0 0 80%;
        text-align: center;
    }
- } 
+} 
  
- 
+/*how do i fix white space at the bottom / background isn't taking up whole page*/
  
